fix body scroll on iPhone

--- a/assets/style.css
+++ b/assets/style.css
@@ -195,6 +195,9 @@ form {
 }
 
 @media only screen and (max-width: 745px)  {
+    body {
+        overflow: hidden;
+    }
   /*Game screen*/
     #spacer {
         height: 4.1rem;
